change the flags to use just the windows strusted store root